force-app/main/default/objects/Retail_Customer_Visit__c/Retail_Customer_Visit__c.object-meta.xml
<CustomObject>
    <label>Retail Customer Visit</label>
    <nameField>
        <displayFormat>RCV-{0000}</displayFormat>
        <label>Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Customer Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>