force-app/main/default/objects/Retail_Customer_Visit__c/fields/Add_Lead__c.field-meta.xml
<CustomField>
    <fullName>Add_Lead__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Add Lead</label>
    <referenceTo>Retail_Lead__c</referenceTo>
    <relationshipLabel>Retail Customer Visites</relationshipLabel>
    <relationshipName>Retail_Customer_Visites</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>