force-app/main/default/objects/Retail_Customer_Visit__c/fields/New_customer__c.field-meta.xml
<CustomField>
    <fullName>New_customer__c</fullName>
    <label>New customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>