force-app/main/default/objects/Retail_Customer_Visit__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Customer Visits</relationshipLabel>
    <relationshipName>Retail_Customer_Visites</relationshipName>
    <type>Lookup</type>
</CustomField>