force-app/main/default/objects/Retail_Customer_Visit__c/fields/Other_Reason_For_Cold_Lead__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_For_Cold_Lead__c</fullName>
    <label>Other Reason For Cold Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>