force-app/main/default/objects/Retail_Customer_Visit__c/fields/Retailer_s_Site_Photo__c.field-meta.xml
<CustomField>
    <fullName>Retailer_s_Site_Photo__c</fullName>
    <label>Retailer&apos;s Site Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>