force-app/main/default/objects/Retail_Customer_Visit__c/validationRules/Follow_up_date_should_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_up_date_should_be_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>Follow_up_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Follow_up_Date__c</errorDisplayField>
    <errorMessage>Follow-up date has to be a future date!</errorMessage>
</ValidationRule>