force-app/main/default/objects/Retail_Customer_Visit__c/validationRules/Other_Reason_shoulf_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Reason_shoulf_not_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Reason_for_Cold_Lead__c , &apos;Other&apos;) ,  ISBLANK( Other_Reason_For_Cold_Lead__c ) , Null)</errorConditionFormula>
    <errorMessage>If Reason for Cold Lead is Other Then Other Reason For cold Lead cannot be empty</errorMessage>
</ValidationRule>