force-app/main/default/objects/Retail_Customer_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Add_Lead__c</columns>
    <columns>Comments__c</columns>
    <columns>Date__c</columns>
    <columns>Visit_Counter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>